#11 adjust scores ui, GetGame api
